Assets dropped upside down when looking through camera #96776

Closed
opened 2022-03-25 09:29:35 +01:00 by Patryk · 14 comments

System Information
Operating system: Win 10 Home
Graphics card: Nvidia GeForce GTX 970

Blender Version
Broken: 3.1.0

Short description of error
Adding assets from asset browser while "looking" through camera flip the asset upside-down (in free view works correctly)

**System Information** Operating system: Win 10 Home Graphics card: Nvidia GeForce GTX 970 **Blender Version** Broken: 3.1.0 **Short description of error** Adding assets from asset browser while "looking" through camera flip the asset upside-down (in free view works correctly)
Author

Added subscriber: @GregoriiK

Added subscriber: @GregoriiK
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I can't replicate this issue. I am testing on the Cube Diorama demo. Can you test on that demo and check if you can replicate the issue there? https://www.blender.org/download/demo-files/
If you can't replicate on that demo either, can you attach a minimal setup to reproduce your issue?

I can't replicate this issue. I am testing on the Cube Diorama demo. Can you test on that demo and check if you can replicate the issue there? https://www.blender.org/download/demo-files/ If you can't replicate on that demo either, can you attach a minimal setup to reproduce your issue?
Author

Hi,
sorry for the delay, i didn't noticed your answer. I did replicate this error in Cube diorama scene, only thing you need to do is to change camera view to perspective, set its x angle to 90 and move it to center the room in the render region.

Hi, sorry for the delay, i didn't noticed your answer. I did replicate this error in Cube diorama scene, only thing you need to do is to change camera view to perspective, set its x angle to 90 and move it to center the room in the render region.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Starting from the Cube Diorama file:

  • Make the camera perspective.
  • Make its x rotation 90 degrees.
  • Move it a bit outward as shown in the video.
  • Inserting assets put them inverted.

20220525-122741.mp4

Starting from the Cube Diorama file: - Make the camera perspective. - Make its x rotation 90 degrees. - Move it a bit outward as shown in the video. - Inserting assets put them inverted. [20220525-122741.mp4](https://archive.blender.org/developer/F13104223/20220525-122741.mp4)
Julian Eisel changed title from Adding from asset browser to Assets dropped upside down when looking through camera 2022-05-30 15:44:32 +02:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Friendly reminder to make sure the report title is useful when triaging :)

Friendly reminder to make sure the report title is useful when triaging :)

Added subscriber: @Agnes-Masanja-1

Added subscriber: @Agnes-Masanja-1
Agnes Masanja self-assigned this 2022-06-16 14:57:40 +02:00

Looking at this, verified this issue, trying a fix now

Looking at this, verified this issue, trying a fix now

This issue was referenced by 6edc9438a4

This issue was referenced by 6edc9438a461ff8fbf7cd49d74104342af33ee05

This issue was referenced by 317dfc1735

This issue was referenced by 317dfc17358fd4ee0c7f19be62112d7037b6c6f2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96776
No description provided.